overflow on x-axis bug fix

--- a/src/components/MainPage.scss
+++ b/src/components/MainPage.scss
@@ -1,3 +1,6 @@
+#main-container{
+    overflow-x: hidden;
+}
 .loader-component{
     font-family: 'Oswald';
     position: fixed;
